re-factor castling calculation